<resources>
    <string name="app_name">UNO Game</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="registration_fragment_label">Registration Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="game_fragment_label">Game Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_profile">Profile</string>
    <string name="action_new_game">New Game</string>
    <string name="action_logout">Logout</string>
    <string name="action_create_game">Create Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>