<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.kai.unogame.ui.authentication.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegistrationFragment"
            app:destination="@id/RegistrationFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegistrationFragment"
        android:name="com.kai.unogame.ui.authentication.RegistrationFragment"
        android:label="@string/registration_fragment_label"
        tools:layout="@layout/fragment_registration">

        <action
            android:id="@+id/action_RegistrationFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.kai.unogame.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_GameFragment"
            app:destination="@id/GameFragment" />
    </fragment>
    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.kai.unogame.ui.profile.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_ProfileFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/GameFragment"
        android:name="com.kai.unogame.ui.game.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_GameFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>